Resolves: fdo#84261 unexpected exception -> clang builds terminate

Change-Id: I545ed112b54fb3d81e67b0f42230811cd48de626
(cherry picked from commit 4652700776666e385946c47235363c1120846d5d)
Reviewed-on: https://gerrit.libreoffice.org/11653
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>